# proto-server

./: .gitignore  CMakeLists.txt  README.md  license.md
ffmpeg_sandbox/tutorial_one_screencap/: CMakeLists.txt
ffmpeg_sandbox/tutorial_one_screencap/src/: main.cpp
net_protocol/: .cproject  .project  CMakeLists.txt  Makefile  libnet_protocol
net_protocol/include/: net_data.hpp  net_parse_routines.hpp  net_protocol.hpp
net_protocol/include/http/: http_constants.hpp  http_data.hpp  http_header_fields.hpp  http_headers.hpp  http_message.hpp  http_parse_routines.hpp  http_request_handler.hpp  http_request_message.hpp  http_request_parser.hpp  http_response_message.hpp  http_response_parser.hpp  http_status_code.hpp
net_protocol/src/: http_header_fields.cpp  http_headers.cpp  http_message.cpp  http_parse_routines.cpp  http_request_handler.cpp  http_request_message.cpp  http_request_parser.cpp  http_response_message.cpp  http_response_parser.cpp  http_status_code.cpp  net_data.cpp  net_parse_routines.cpp
net_protocol/test/: test_header_fields.cpp  test_http_headers.cpp  test_http_message.cpp  test_http_parse_routines.cpp  test_http_request_handler.cpp  test_http_request_message.cpp  test_http_request_parser.cpp  test_http_response_parser.cpp  test_http_status_code.cpp  test_net_data.cpp  test_net_parse_routines.cpp
proto_server/: CMakeLists.txt  Doxyfile
proto_server/core/: proto_async_io.hpp  proto_constants.h  proto_io_object.cpp  proto_io_object.hpp  proto_io_tcp_object.cpp  proto_io_tcp_object.hpp  proto_net_data.cpp  proto_net_data.hpp  proto_net_types.cpp  proto_net_types.hpp  proto_server.cpp  proto_server.hpp  proto_service.hpp  proto_tcp_server.cpp  proto_tcp_server.hpp  proto_tcp_session.cpp  proto_tcp_session.hpp
proto_server/core/client/: proto_client.cpp  proto_client.hpp  proto_sync_text_client.cpp  proto_sync_text_client.hpp  proto_tcp_client.cpp  proto_tcp_client.hpp  proto_tcp_text_client.cpp  proto_tcp_text_client.hpp
proto_server/core/data/: proto_net_data.cpp  proto_net_data.hpp  proto_net_error_data.cpp  proto_net_error_data.hpp  proto_net_io.hpp  proto_net_pipe.cpp  proto_net_pipe.hpp  proto_net_pipeline.cpp  proto_net_pipeline.hpp  proto_net_string_data.cpp  proto_net_string_data.hpp  proto_tcp_downstream_pipeline.cpp  proto_tcp_downstream_pipeline.hpp  proto_tcp_upstream_pipeline.cpp  proto_tcp_upstream_pipeline.hpp
proto_server/core/factory/: proto_service_factory.hpp  proto_tcp_client_factory.cpp  proto_tcp_client_factory.hpp  proto_tcp_server_factory.cpp  proto_tcp_server_factory.hpp  proto_tcp_text_client_factory.cpp  proto_tcp_text_client_factory.hpp  proto_tcp_text_server_factory.cpp  proto_tcp_text_server_factory.hpp
proto_server/core/protocol/: net_parse_routines.cpp  net_parse_routines.hpp  net_protocol.hpp
proto_server/core/protocol/c4soap/: c4soap_director.cpp  c4soap_director.hpp  c4soap_getdevicebyinterface.cpp  c4soap_getdevicebyinterface.hpp  c4soap_message.cpp  c4soap_message.hpp  c4soap_parser.cpp  c4soap_parser.hpp  c4soap_sendtodevice.cpp  c4soap_sendtodevice.hpp  c4soap_std_getuser.cpp  c4soap_std_getuser.hpp
proto_server/core/protocol/http/: http_constants.hpp  http_data.hpp  http_time.cpp  (+21 more)
proto_server/core/server/: proto_server.cpp  proto_server.hpp  proto_session.cpp  proto_session.hpp  proto_tcp_server.cpp  proto_tcp_server.hpp  proto_tcp_server_listener.hpp  proto_tcp_session.cpp  proto_tcp_session.hpp  proto_tcp_text_server.cpp  proto_tcp_text_server.hpp  proto_tcp_text_session.cpp  proto_tcp_text_session.hpp
proto_server/logger/: proto_logger.cpp  proto_logger.hpp
proto_server/test/: CMakeLists.txt  test_c4soap_message.cpp  test_header_fields.cpp  test_http_headers.cpp  test_http_message.cpp  test_http_parse_routines.cpp  test_http_request_handler.cpp  test_http_request_message.cpp  test_http_request_parser.cpp  test_http_response_parser.cpp  test_http_status_code.cpp  test_net_parse_routines.cpp  test_proto_net_data.cpp  test_urlencode_parse_routines.cpp
sipclient/: .cproject  .project  CMakeLists.txt  Makefile  Makefile.c4
sipclient/include/: sipclient_layer_event.hpp  sipclient_logger.hpp  sipclient_logging.hpp  sipclient_notification.hpp  sipclient_notifier.hpp  sipclient_signaling.hpp  useragent_signaling.hpp  useragent_signaling.hpp~
sipclient/src/: main.cpp  main.cpp~  sipclient_logger.cpp  sipclient_notification.cpp  sipclient_signaling.cpp  useragent_signaling.cpp  useragent_signaling.cpp~
sipuseragent/: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  Makefile.c4
sipuseragent/include/: InviteHandler.hpp  MessageHandler.hpp  OutOfDialogHandler.hpp  PublicationHandler.hpp  RegistrationHandler.hpp  SessionCallback.hpp  SessionDialog.hpp  SessionSdp.hpp  SubscriptionHandler.hpp  UserAgent.hpp  UserAgentCallbackImpl.hpp  userAgentCallbackCollection.h  userAgentHelper.h
sipuseragent/include/sip/: resip_dum.h  resip_dum_ssl.h  resip_stack.h  resip_stack_ssl.h  rutil.h
sipuseragent/src/: InviteHandler.cpp  MessageHandler.cpp  OutOfDialogHandler.cpp  PublicationHandler.cpp  RegistrationHandler.cpp  SessionDialog.cpp  SessionSdp.cpp  SubscriptionHandler.cpp  UserAgent.cpp  userAgentHelper.cpp
sipuseragent/test/: SipUserAgentUnitTest.sln  SipUserAgentUnitTest.vcxproj  Test_Collection.cpp  Test_InviteHandler.cpp  Test_OutOfDialogHandler.cpp  Test_RegistrationHandler.cpp  Test_SessionSdp.cpp
tcp_network/: .cproject  .project  CMakeLists.txt  Makefile
tcp_network/include/tcp_net/: tcp_server.hpp  tcp_server_pipe.hpp  tcp_session.hpp
tcp_network/samples/control4_server/: CMakeLists.txt  Makefile  control4_server.cpp  control4_server.hpp  control4_session.cpp  control4_session.hpp  main.cpp
tcp_network/samples/echo_client/: CMakeLists.txt  Makefile  main.cpp
tcp_network/samples/echo_server/: #main.cpp#  CMakeLists.txt  Makefile  echo_server.cpp  echo_server.hpp  echo_session.cpp  echo_session.hpp  main.cpp
tcp_network/samples/http_server/: CMakeLists.txt  Makefile  http_server.cpp  http_server.hpp  http_session.cpp  http_session.hpp  main.cpp
tcp_network/src/: tcp_server.cpp
(+87 files in other folders)
